--- a/package.json
+++ b/package.json
@@ -8,29 +8,31 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test:unit:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "pinia": "^2.1.6",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "pinia": "^2.1.7",
+    "vue": "^3.3.12",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.3.2",
-    "@vitejs/plugin-vue": "^4.3.1",
+    "@rushstack/eslint-patch": "^1.6.1",
+    "@vitejs/plugin-vue": "^4.5.2",
+    "@vitest/coverage-v8": "^1.0.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/test-utils": "^2.4.3",
     "add": "^2.0.6",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.46.0",
-    "eslint-plugin-vue": "^9.16.1",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.3",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.2"
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
+    "jsdom": "^23.0.1",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.10",
+    "vitest": "^1.0.4"
   },
   "keywords": [
     "vue-3",
