--- a/.github/workflows/vue-3-tailwind.yml
+++ b/.github/workflows/vue-3-tailwind.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-      # - name: Run tests and generate coverage report
-      #   run: npm run test:unit -- --coverage
+      - name: Run tests and generate coverage report
+        run: npm run test:unit -- --coverage
 
       # - name: Publish coverage report to Codecov
       #   uses: codecov/codecov-action@v2
