--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "test:unit": "vitest",
-    "lint": "eslint .",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "test:unit:coverage": "vitest run --coverage"
+    "test:unit:coverage": "vitest run --coverage",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vitest/eslint-plugin": "^1.1.8",
     "pinia": "^2.1.7",
     "vite-plugin-vue-devtools": "^7.6.4",
     "vue": "^3.3.12",
@@ -21,25 +21,29 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.6.1",
+    "@types/node": "^20.17.7",
     "@vitejs/plugin-vue": "^4.5.2",
     "@vitest/coverage-v8": "^1.0.4",
     "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.3",
-    "add": "^2.0.6",
+    "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.16",
-    "eslint": "^9.14.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.4.10",
-    "vitest": "^1.0.4"
+    "typescript": "~5.3.3",
+    "vite": "^5.0.10",
+    "vitest": "^1.0.4",
+    "vue-tsc": "^1.8.27"
   },
   "keywords": [
     "vue-3",
-    "compposition-api",
+    "composition-api",
     "pinia",
     "tailwindcss"
   ]
