--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "1.7.23",
     "@heroicons/vue": "2.2.0",
     "@tailwindcss/vite": "4.1.4",
+    "chart.js": "4.4.9",
     "heroicons": "2.2.0",
     "pinia": "^2.1.7",
     "ts-node": "10.9.2",
@@ -20,6 +21,7 @@
     "vue-router": "4.5.0"
   },
   "devDependencies": {
+    "@types/chart.js": "2.9.41",
     "@types/node": "22.14.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "tailwindcss": "^4.1.4",
